--- a/WaltDisneyManagement/src/main/resources/templates/adminpage.html
+++ b/WaltDisneyManagement/src/main/resources/templates/adminpage.html
@@ -41,174 +41,12 @@
 <body>
 
 <!-- ======= Header ======= -->
-<header id="header" class="header fixed-top d-flex align-items-center">
+<div th:replace="header :: header"></div>
+<!-- End Header -->
 
-    <div class="d-flex align-items-center justify-content-between">
-        <div class="logo d-flex align-items-center">
-            <a href="/" class="d-flex align-items-center">
-                <img src="/img/disneylogo.png" alt="">
-                <span class="d-none d-lg-block" style="font-size: 18px; margin-left: 5px; margin-right: 30px;">Walt Disney Management</span>
-            </a>
-        </div>
-        <i class="bi bi-list toggle-sidebar-btn"></i>
-    </div><!-- End Logo -->
-
-
-    <nav class="header-nav ms-auto">
-        <ul class="d-flex align-items-center">
-
-
-            <li class="nav-item" th:if="${role eq 'ADMIN'}">
-                <a href="/adminpage" class="nav-link nav-icon" >
-                    <i class="bi bi-tools"></i>
-                </a>
-            </li><!-- End Search Icon-->
-
-
-            <li class="nav-item dropdown pe-3">
-
-                <a class="nav-link nav-profile d-flex align-items-center pe-0" href="" data-bs-toggle="dropdown">
-                    <img src="/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-                    <span class="d-none d-md-block dropdown-toggle ps-2" th:text="${username}"></span>
-                </a><!-- End Profile Iamge Icon -->
-
-                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
-                    <li class="dropdown-header">
-                        <h6 th:text="${username}"></h6>
-                        <span th:text="${role}"></span>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li>
-                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
-                            <i class="bi bi-person"></i>
-                            <span>My Profile</span>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li>
-                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
-                            <i class="bi bi-gear"></i>
-                            <span>Account Settings</span>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li>
-                        <a class="dropdown-item d-flex align-items-center" href="pages-faq.html">
-                            <i class="bi bi-question-circle"></i>
-                            <span>Need Help?</span>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li>
-                        <a class="dropdown-item d-flex align-items-center" href="#">
-                            <i class="bi bi-box-arrow-right"></i>
-                            <span>Sign Out</span>
-                        </a>
-                    </li>
-
-                </ul><!-- End Profile Dropdown Items -->
-            </li><!-- End Profile Nav -->
-
-        </ul>
-    </nav><!-- End Icons Navigation -->
-
-</header>
 <!-- ======= Sidebar ======= -->
-<aside id="sidebar" class="sidebar">
-
-    <ul class="sidebar-nav" id="sidebar-nav">
-
-        <li class="nav-item">
-            <a class="nav-link" th:href="@{/}">
-                <i class="bi bi-grid"></i>
-                <span>Home</span>
-            </a>
-        </li><!-- End Dashboard Nav -->
-
-        <li class="nav-heading">Parks</li>
-
-        <li class="nav-item" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
-            <a class="nav-link collapsed" th:href="@{/park/{parkName}(parkName=${'Magic Kingdom'})}">
-                <i class="bi bi-signpost"></i>
-                <span>Magic Kingdom</span>
-            </a>
-        </li><!-- End Profile Page Nav -->
-
-        <li class="nav-item" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
-            <a class="nav-link collapsed" th:href="@{/park/{parkName}(parkName=${'Epcot'})}">
-                <i class="bi bi-signpost"></i>
-                <span>EPCOT</span>
-            </a>
-        </li><!-- End F.A.Q Page Nav -->
-
-        <li class="nav-item" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
-            <a class="nav-link collapsed" th:href="@{/park/{parkName}(parkName=${'Hollywood Studios'})}">
-                <i class="bi bi-signpost"></i>
-                <span>Hollywood Studios</span>
-            </a>
-        </li><!-- End Contact Page Nav -->
-
-        <li class="nav-item" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
-            <a class="nav-link collapsed" th:href="@{/park/{parkName}(parkName=${'Animal Kingdom'})}">
-                <i class="bi bi-signpost"></i>
-                <span>Animal Kingdom</span>
-            </a>
-        </li><!-- End Register Page Nav -->
-
-        <li class="nav-item" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
-            <a class="nav-link collapsed" th:href="@{/park/{parkName}(parkName=${'Disney Springs'})}">
-                <i class="bi bi-signpost"></i>
-                <span>Disney Springs</span>
-            </a>
-        </li><!-- End Login Page Nav -->
-
-        <li class="nav-item" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
-            <a class="nav-link collapsed" th:href="@{/park/{parkName}(parkName=${'Typhoon Lagoon'})}">
-                <i class="bi bi-droplet"></i>
-                <span>Typhoon Lagoon</span>
-            </a>
-        </li><!-- End Blank Page Nav -->
-
-        <li class="nav-item" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
-            <a class="nav-link collapsed" th:href="@{/park/{parkName}(parkName=${'Blizzard Beach'})}">
-                <i class="bi bi-droplet"></i>
-                <span>Blizzard Beach</span>
-            </a>
-        </li><!-- End Error 404 Page Nav -->
-
-        <!-- Parking Lot 1 Nav -->
-        <li class="nav-item" th:if="${role eq 'ADMIN' or role eq 'PARKING'}">
-            <a class="nav-link collapsed" th:href="@{/ParkCars/{parkCarsName}(parkCarsName=${'ParkingLot1'})}">
-                <i class="bi bi-car-front"></i>
-                <span>Parking Lot 1</span>
-            </a>
-        </li>
-        <!-- End Parking Lot 1 Nav -->
-
-        <!-- Parking Lot 2 Nav -->
-        <li class="nav-item" th:if="${role eq 'ADMIN' or role eq 'PARKING'}">
-            <a class="nav-link collapsed" th:href="@{/ParkCars/{parkCarsName}(parkCarsName=${'ParkingLot2'})}">
-                <i class="bi bi-car-front"></i>
-                <span>Parking Lot 2</span>
-            </a>
-        </li>
-        <!-- End Parking Lot 2 Nav -->
-
-    </ul>
-
-</aside><!-- End Sidebar-->
+<div th:replace="sidebar :: sidebar"></div>
+<!-- End Sidebar-->
 
 <main id="main" class="main">
 
@@ -239,7 +77,10 @@
                                 <td th:text="${employee.email}"></td>
                                 <td th:text="${employee.role}"></td>
                                 <td>
-                                    <button type="button" class="btn btn-danger" th:data-email="${employee.email}" onclick="deleteEmployee(this)">X</button>                                </td>
+                                    <button type="button" class="btn btn-danger" th:data-email="${employee.email}" onclick="deleteEmployee(this)">
+                                        <i class="bi bi-trash"></i>
+                                    </button>
+                                </td>
                             </tr>
 
 
@@ -333,7 +174,9 @@
                             <tr>
                                 <td th:text="${park.name}"></td>
                                 <td>
-                                    <button type="button" class="btn btn-danger" th:data-parkname="${park.name}" onclick="deletePark(this)">X</button>                                </td>
+                                    <button type="button" class="btn btn-danger" th:data-parkname="${park.name}" onclick="deletePark(this)">
+                                        <i class="bi bi-trash"></i>
+                                    </button>
                                 </td>
                             </tr>
 
@@ -360,7 +203,9 @@
                             <tr>
                                 <td th:text="${parkcars.name}"></td>
                                 <td>
-                                    <button type="button" class="btn btn-danger" th:data-parkcarsname="${parkcars.name}" onclick="deleteParkCar(this)">X</button>                                </td>
+                                    <button type="button" class="btn btn-danger" th:data-parkcarsname="${parkcars.name}" onclick="deleteParkCar(this)">
+                                        <i class="bi bi-trash"></i>
+                                    </button>
                                 </td>
                             </tr>
 
@@ -396,7 +241,9 @@
                                     <td th:text="${attraction.park.name}"></td>
                                     <td th:text="${attraction.type}"></td>
                                     <td>
-                                        <button type="button" class="btn btn-danger" th:data-attractionname="${attraction.name}" onclick="deleteAttraction(this)">X</button>                                </td>
+                                        <button type="button" class="btn btn-danger" th:data-attractionname="${attraction.name}" onclick="deleteAttraction(this)">
+                                            <i class="bi bi-trash"></i>
+                                        </button>
                                     </td>
                                 </tr>
 
