--- a/WaltDisneyManagement/src/main/resources/templates/index.html
+++ b/WaltDisneyManagement/src/main/resources/templates/index.html
@@ -72,118 +72,28 @@
             <!-- Magic Kingdom Park Card -->
 
 
-            <div class="col-xxl-4 col-xl-12" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
+            <div class="col-xxl-4 col-xl-12" th:each="park : ${parks}" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
               <a>
-                <div class="card info-card customers-card" data-parkname="Magic Kingdom" style="cursor: pointer;background-image: url('/img/magicKingdomPark.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
+                <div class="card info-card customers-card" th:data-parkname="${park.name}" th:style="'cursor: pointer; background-image: url(\'/img/' + ${park.name.replace(' ', '').toLowerCase()} + '.jpg\')'">
                   <div class="card-body">
-                    <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Magic Kingdom</h5>
+                    <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;" th:text="${park.name}"></h5>
+                  </div>
+                </div>
+              </a>
+            </div>
+
+
+            <div class="col-xxl-4 col-xl-12" th:each="park : ${parkCars}" th:if="${role eq 'ADMIN' or role eq 'PARKING'}">
+              <a>
+                <div class="card info-card customers-card" th:data-parkinglotname="${park.name}" style="cursor: pointer; background-image: url('/img/parque2.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
+                  <div class="card-body">
+                    <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;" th:text="${park.name}"></h5>
                   </div>
                 </div>
               </a>
             </div><!-- End Customers Card -->
 
-            <!-- Epcot Card -->
-            <div class="col-xxl-4 col-xl-12" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
 
-              <div class="card info-card customers-card" data-parkname="Epcot" style="cursor: pointer;background-image: url('/img/epcot.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
-
-                <div class="card-body">
-                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">EPCOT</h5>
-                </div>
-              </div>
-
-            </div>
-            <!-- End Customers Card -->
-
-            <!-- Disney's Hollywood Studios Park Card -->
-            <div class="col-xxl-4 col-xl-12" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
-
-              <div class="card info-card customers-card" data-parkname="Hollywood Studios" style="cursor: pointer;background-image: url('/img/hollywood.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
-
-                <div class="card-body">
-                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Hollywood Studios</h5>
-                </div>
-              </div>
-
-            </div>
-            <!-- End Customers Card -->
-
-            <!-- Disney's Animal Kingdom Theme Park -->
-            <div class="col-xxl-4 col-xl-12" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
-
-              <div class="card info-card customers-card" data-parkname="Animal Kingdom" style="cursor: pointer;background-image: url('/img/animalKingdom.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
-
-                <div class="card-body">
-                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Animal Kingdom</h5>
-                </div>
-              </div>
-
-            </div>
-            <!-- End Customers Card -->
-
-            <!-- Disney Springs Card -->
-            <div class="col-xxl-4 col-xl-12" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
-
-              <div class="card info-card customers-card" data-parkname="Disney Springs" style="cursor: pointer;background-image: url('/img/springs.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
-
-                <div class="card-body">
-                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Disney Springs</h5>
-                </div>
-              </div>
-
-            </div>
-            <!-- End Customers Card -->
-
-            <!-- Disney's Typhoon Lagoon Water Park  Card -->
-            <div class="col-xxl-4 col-xl-12" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
-
-              <div class="card info-card customers-card" data-parkname="Typhoon Lagoon" style="cursor: pointer;background-image: url('/img/lagoon.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
-
-                <div class="card-body">
-                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Typhoon Lagoon</h5>
-                </div>
-              </div>
-
-            </div>
-            <!-- End Customers Card -->
-
-            <!-- Disney's Blizzard Beach Water Park Card -->
-            <div class="col-xxl-4 col-xl-12" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
-
-              <div class="card info-card customers-card" data-parkname="Blizzard Beach" style="cursor: pointer;background-image: url('/img/blizzard.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
-
-                <div class="card-body">
-                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Blizzard Beach</h5>
-                </div>
-              </div>
-
-            </div>
-            <!-- End Customers Card -->
-
-            <!-- Parque Estacionamento 1 Card -->
-            <div class="col-xxl-4 col-xl-12" th:if="${role eq 'ADMIN' or role eq 'PARKING'}">
-
-              <a>
-                <div class="card info-card customers-card" data-parkinglotname="ParkingLot1"  style="cursor: pointer; background-image: url('/img/parque1.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
-                  <div class="card-body">
-                    <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">ParkingLot1</h5>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <!-- End Customers Card -->
-
-            <!-- Parque Estacionamento 2 Card --> 
-            <div class="col-xxl-4 col-xl-12" th:if="${role eq 'ADMIN' or role eq 'PARKING'}">
-              <a>
-                <div class="card info-card customers-card" data-parkinglotName="ParkingLot2" style="cursor: pointer; background-image: url('/img/parque2.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
-                  <div class="card-body">
-                    <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">ParkingLot2</h5>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <!-- End Customers Card -->
             
             <!-- Line Chart -->
             <div class="col-12">
