--- a/WaltDisneyManagement/src/main/resources/templates/adminpage.html
+++ b/WaltDisneyManagement/src/main/resources/templates/adminpage.html
@@ -67,7 +67,7 @@
                                 <th scope="col">Name</th>
                                 <th scope="col">Email</th>
                                 <th scope="col">Role</th>
-                                <th scope="col">Delete</th>
+                                <th scope="col">Delete/Update</th>
                             </tr>
                             </thead>
                             <tbody th:each="employee : ${employees}">
@@ -80,6 +80,9 @@
                                     <button type="button" class="btn btn-danger" th:data-email="${employee.email}" onclick="deleteEmployee(this)">
                                         <i class="bi bi-trash"></i>
                                     </button>
+                                    <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#UpdateUserModal" th:data-email="${employee.email}" th:data-name="${employee.name}" th:data-role="${employee.role}" onclick="fillForm(this)">
+                                        <i class="bi bi-pencil-square"></i>
+                                    </button>
                                 </td>
                             </tr>
 
@@ -90,6 +93,69 @@
 
                         <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#addUserModal">ADD EMPLOYEE</button>
 
+                    </div>
+
+                    <div class="modal fade" id="UpdateUserModal" tabindex="-1" aria-labelledby="UpdateuserModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="UpdateuserModalLabel">New maintenance</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <form class="row g-3" id="UpdateUserForm" enctype="multipart/form-data">
+                                        <div class="col-12">
+                                            <label for="Name" class="form-label">Employee Name</label>
+                                            <input type="text" class="form-control" id="Name" name="name">
+                                        </div>
+                                        <div class="col-12">
+                                            <label for="Email" class="form-label">Email</label>
+                                            <input type="text" class="form-control" id="Email" name="email">
+                                        </div>
+                                        <div class="col-12">
+                                            <label for="Password" class="form-label">Password</label>
+                                            <input type="text" class="form-control" id="Password" name="password">
+                                        </div>
+                                        <div class="col 12">
+                                            <legend class="col-form-label col-sm-2 pt-0">Role</legend>
+                                            <div class="col-sm-10">
+                                                <div class="form-check">
+                                                    <input class="form-check-input" type="radio" name="Radios" id="technician" value="TECHNICIAN">
+                                                    <label class="form-check-label" for="technician">
+                                                        TECHNICIAN
+                                                    </label>
+                                                </div>
+                                                <div class="form-check">
+                                                    <input class="form-check-input" type="radio" name="Radios" id="parking" value="PARKING">
+                                                    <label class="form-check-label" for="parking">
+                                                        PARKING
+                                                    </label>
+                                                </div>
+                                                <div class="form-check disabled">
+                                                    <input class="form-check-input" type="radio" name="Radios" id="admin" value="ADMIN">
+                                                    <label class="form-check-label" for="admin">
+                                                        ADMIN
+                                                    </label>
+                                                </div>
+                                            </div>
+                                        </div>
+
+
+                                        <div class="text-center">
+                                            <button type="button" class="btn btn-success" onclick="UpdateEmployee(
+                                                document.getElementById('Name').value,
+                                                document.getElementById('Email').value,
+                                                document.getElementById('Password').value,
+                                                document.querySelector('input[name=Radios]:checked').value
+                                               )">Update</button>
+
+                                            <button type="reset" class="btn btn-secondary">Reset</button>
+                                        </div>
+                                    </form>
+                                </div>
+                                <!-- You can add more modal content as needed -->
+                            </div>
+                        </div>
                     </div>
 
 
@@ -141,7 +207,7 @@
 
 
                                         <div class="text-center">
-                                            <button type="button" class="btn btn-success" onclick="submitForm(
+                                            <button type="button" class="btn btn-success" onclick="CreateEmployee(
                                                 document.getElementById('employeeName').value,
                                                 document.getElementById('employeeEmail').value,
                                                 document.getElementById('employeePassword').value,
