--- a/WaltDisneyManagement/src/main/resources/templates/adminpage.html
+++ b/WaltDisneyManagement/src/main/resources/templates/adminpage.html
@@ -105,16 +105,16 @@
                                 <div class="modal-body">
                                     <form class="row g-3" id="UpdateUserForm" enctype="multipart/form-data">
                                         <div class="col-12">
-                                            <label for="Name" class="form-label">Employee Name</label>
-                                            <input type="text" class="form-control" id="Name" name="name">
-                                        </div>
-                                        <div class="col-12">
                                             <label for="Email" class="form-label">Email</label>
-                                            <input type="text" class="form-control" id="Email" name="email">
-                                        </div>
+                                            <input type="text" class="form-control" id="Email" name="email" readonly disabled>                                        </div>
+
                                         <div class="col-12">
                                             <label for="Password" class="form-label">Password</label>
                                             <input type="text" class="form-control" id="Password" name="password">
+                                        </div>
+                                        <div class="col-12">
+                                            <label for="Name" class="form-label">Employee Name</label>
+                                            <input type="text" class="form-control" id="Name" name="name">
                                         </div>
                                         <div class="col 12">
                                             <legend class="col-form-label col-sm-2 pt-0">Role</legend>
