--- a/WaltDisneyManagement/src/main/resources/templates/index.html
+++ b/WaltDisneyManagement/src/main/resources/templates/index.html
@@ -98,56 +98,10 @@
             <!-- Line Chart -->
             <div class="col-12">
               <div class="card">
-
-                <div class="filter">
-                  <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
-                  <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-                    <li class="dropdown-header text-start">
-                      <h6>Filter</h6>
-                    </li>
-
-                    <li><a class="dropdown-item" href="#">Today</a></li>
-                    <li><a class="dropdown-item" href="#">This Month</a></li>
-                    <li><a class="dropdown-item" href="#">This Year</a></li>
-                  </ul>
-                </div>
                 <div class="card-body">
                   <h5 class="card-title">Visitor Flow <span>| Today</span></h5>
 
-                  <div id="lineChart"></div>
-
-                  <script>
-                    document.addEventListener("DOMContentLoaded", () => {
-                      new ApexCharts(document.querySelector("#lineChart"), {
-                        series: [{
-                          name: "Desktops",
-                          data: [10, 41, 35, 51, 49, 62, 69, 91, 148, 120, 80]
-                        }],
-                        chart: {
-                          height: 350,
-                          type: 'line',
-                          zoom: {
-                            enabled: false
-                          }
-                        },
-                        dataLabels: {
-                          enabled: false
-                        },
-                        stroke: {
-                          curve: 'straight'
-                        },
-                        grid: {
-                          row: {
-                            colors: ['#f3f3f3', 'transparent'], // takes an array which will be repeated on columns
-                            opacity: 0.5
-                          },
-                        },
-                        xaxis: {
-                          categories: ['8h', '9h', '10h', '11h', '12h', '13h', '14h', '15h', '16h', '17h', '18h'],
-                        }
-                      }).render();
-                    });
-                  </script>
+                  <div id="visitorsChart"></div>
 
                 </div>
               </div>
@@ -164,20 +118,6 @@
           <!-- Customers Card -->
           <div class="card info-card">
 
-            <div class="filter">
-              <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
-              <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-                <li class="dropdown-header text-start">
-                  <h6>Filter</h6>
-                </li>
-
-                <li><a class="dropdown-item" href="#">Today</a></li>
-                <li><a class="dropdown-item" href="#">This Month</a></li>
-                <li><a class="dropdown-item" href="#">This Year</a></li>
-              </ul>
-            </div>
-
-
             <div class="card-body">
               <h5 class="card-title">Visitors<span> | Now</span></h5>
 
@@ -187,24 +127,6 @@
                 </div>
                 <div class="ps-3">
                   <h6 id="visitors">-</h6>
-                  <span class="text-danger small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">decrease</span>
-
-                </div>
-              </div>
-
-            </div>
-
-
-            <div class="card-body">
-              <h5 class="card-title">Visitors Expected<span> | Today</span></h5>
-
-              <div class="d-flex align-items-center">
-                <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                  <i class="bi bi-people"></i>
-                </div>
-                <div class="ps-3">
-                  <h6>1 244 000</h6>
-                  <span class="text-danger small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">decrease</span>
 
                 </div>
               </div>
@@ -226,7 +148,11 @@
                   <div class="activity-item d-flex">
                     <div class="activite-label" th:text="${history.date}"></div>
                     <i class='bi bi-circle-fill activity-badge text-success align-self-start'></i>
-                    <div class="activity-content" th:text="|${history.park} - ${history.description}|"></div>
+                    <div class="activity-content">
+                      <strong><span th:text="${history.park}"></span></strong>
+                      <span th:text="| - ${history.description}|"></span>
+                    </div>
+
                   </div><!-- End activity item-->
                 </th:block>
 
@@ -242,19 +168,6 @@
           <!-- Pie Chart -->
           <div class="card">
             <div class="card-body">
-
-              <div class="filter">
-                <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
-                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-                  <li class="dropdown-header text-start">
-                    <h6>Filter</h6>
-                  </li>
-
-                  <li><a class="dropdown-item" href="#">Today</a></li>
-                  <li><a class="dropdown-item" href="#">This Month</a></li>
-                  <li><a class="dropdown-item" href="#">This Year</a></li>
-                </ul>
-              </div>
               <h5 class="card-title">Visitor Flow in Each Park <span>| Now</span></h5>
 
               <div id="pieChart"></div>
