--- a/WaltDisneyManagement/src/main/resources/templates/parking-lot.html
+++ b/WaltDisneyManagement/src/main/resources/templates/parking-lot.html
@@ -79,7 +79,7 @@
 
             <!-- Customers Card -->
             <div class="col-xxl-4 col-xl-12">
-              <div class="card info-card">
+              <div class="card info-card" id="carStatusCard">
                 <div class="card-body">
                   <h5 class="card-title">Status</h5>
   
