--- a/WaltDisneyManagement/src/main/resources/templates/index.html
+++ b/WaltDisneyManagement/src/main/resources/templates/index.html
@@ -74,7 +74,7 @@
 
             <div class="col-xxl-4 col-xl-12" th:each="park : ${parks}" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
               <a>
-                <div class="card info-card customers-card" th:data-parkname="${park.name}" th:style="'cursor: pointer; background-image: url(\'/img/' + ${park.name.replace(' ', '').toLowerCase()} + '.jpg\')'">
+                <div class="card info-card customers-card" th:data-parkname="${park.name}" th:style="'cursor: pointer; background-image: url(\'/img/parks/' + ${park.name.replace(' ', '').toLowerCase()} + '.jpg\')'">
                   <div class="card-body">
                     <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;" th:text="${park.name}"></h5>
                   </div>
@@ -85,7 +85,7 @@
 
             <div class="col-xxl-4 col-xl-12" th:each="park : ${parkCars}" th:if="${role eq 'ADMIN' or role eq 'PARKING'}">
               <a>
-                <div class="card info-card customers-card" th:data-parkinglotname="${park.name}" style="cursor: pointer; background-image: url('/img/parque2.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
+                <div class="card info-card customers-card" th:data-parkinglotname="${park.name}" style="cursor: pointer; background-image: url('/img/parks/parkingLot.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
                   <div class="card-body">
                     <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;" th:text="${park.name}"></h5>
                   </div>
